Fix Embeds overlap issue

--- a/theme/fixedsource.css
+++ b/theme/fixedsource.css
@@ -5142,7 +5142,7 @@ button[class^=attachButton] {
 
 
 .embedFull-1HGV2S>div>div>* {
-    z-index: 10;
+    z-index: 1;
 }
 
 .theme-dark .lookFilled-yCfaCM.colorGrey-2iAG-B {
